[package]
name = "win-ctx"
description = "Library for managing Windows context menu entries"
keywords = ["Windows", "registry", "context"]
authors = ["Adam Davies"]
version = "1.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/acdvs/winctx-rs"

[dependencies]
winreg = "0.55.0"

[dev-dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]